[project]
name = "ComfyUI-Ranking"
description = "ComfyUI-Ranking精选社区，一个排行榜工具"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-Ranking"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-Ranking"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

