[project]
name = "ComfyUI-Ranking"
description = "ComfyUI 精选社区 —— 让创作有价值，让分享有回报。一个深度集成于 ComfyUI 的内容社区插件，支持工具发布、应用分享、资源推荐、任务委托等功能，打造 ComfyUI 生态的价值闭环。"
version = "1.2.0"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-Ranking"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-Ranking"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
